--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - ./volumes/config/config.inc.php:/var/www/html/config.inc.php
         #      - ./config/apache.htaccess:/var/www/html/.htaccess
         #      - ./config/php.custom.ini:/usr/local/etc/php/conf.d/custom.ini
+      - ./volumes/plugins:/var/www/html/plugins
 
     networks:
       - inside
