--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,12 @@ services:
       - ./volumes/db:/var/lib/mysql
 
 
-  ojs:
-    image: pkpofficial/ojs:2_4_6-0
+  arizona:
+    image: birkbeckctp/ojs:2_4_3-0 #pkpofficial/ojs:2_4_6-0
     env_file:
       - .env
-    container_name: "ojs_app_${COMPOSE_PROJECT_NAME}"
-    hostname: "${COMPOSE_PROJECT_NAME}"
+    container_name: "arizona_ojs_app_${COMPOSE_PROJECT_NAME}"
+    hostname: "arizona-${COMPOSE_PROJECT_NAME}"
     restart: always
     ports:
       - "${HTTP_PORT}:80"
@@ -48,6 +48,32 @@ services:
         #      - ./config/apache.htaccess:/var/www/html/.htaccess
         #      - ./config/php.custom.ini:/usr/local/etc/php/conf.d/custom.ini
       - ./volumes/plugins/ojs-janeway:/var/www/html/plugins/generic/ojs-janeway
+      - ./volumes/plugins/ojs-janeway:/var/www/html/plugins/generic/janeway
+
+    networks:
+      - inside
+    depends_on:
+      - db
+    restart: always
+
+  cg:
+    image: birkbeckctp/ojs:2_4_3-0
+    env_file:
+      - .env
+    container_name: "cg_ojs_app_${COMPOSE_PROJECT_NAME}"
+    hostname: "cg-${COMPOSE_PROJECT_NAME}"
+    restart: always
+    ports:
+      - "8081:80"
+    volumes:
+      - /etc/localtime:/etc/localtime
+       # Create files or folders first and check permisions, to avoid errors:
+      - ./volumes/cg/files:/vol/ojsfiles
+      - ./volumes/cg/public:/var/www/html/public
+        #      - ./volumes/logs:/var/log/apache2
+      - ./volumes/cg/config/config.inc.php:/var/www/html/config.inc.php
+        #      - ./config/apache.htaccess:/var/www/html/.htaccess
+        #      - ./config/php.custom.ini:/usr/local/etc/php/conf.d/custom.ini
 
     networks:
       - inside
