--- a/versions/3_1_2-1/alpine/apache/php7/Dockerfile
+++ b/versions/3_1_2-1/alpine/apache/php7/Dockerfile
@@ -17,7 +17,7 @@ ENV COMPOSER_ALLOW_SUPERUSER=1  \
     PACKAGES="supervisor dcron apache2 apache2-ssl apache2-utils php7 php7-fpm php7-cli php7-apache2   \
              php7-zlib php7-json php7-mbstring php7-tokenizer php7-simplexml php7-phar php7-openssl    \
              php7-curl php7-mcrypt php7-pdo_mysql php7-mysqli php7-session php7-ctype php7-gd php7-xml \
-             php7-dom php7-iconv curl nodejs git" \
+             php7-dom php7-iconv curl nodejs git php7-pgsql" \
     EXCLUDE_URL="https://raw.githubusercontent.com/pkp/docker-ojs/master/excludeVar.list"
 
 RUN apk add --update --no-cache $PACKAGES && \
